# DasKannBank-Graphen

./: .gitignore  Makefile  README.md  api.py  app.py  categories.toml  code-principles.md  data.py  pdf2csv.py  pipeline.py  pipeline.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
.plan/: income-graph-plan.md  profit-loss-plan.md
.streamlit/: config.toml
desktop/: index.html  package-lock.json  package.json
desktop/scripts/: build-windows.ps1
desktop/src/: App.css  App.tsx  api.ts  index.css  themes.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/dkb-core/: Cargo.toml
desktop/src-tauri/dkb-core/src/: aggregator.rs  categorizer.rs  config.rs  csv_reader.rs  lib.rs  pdf_extractor.rs  pdf_to_csv.rs  util.rs
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/web-server/: Cargo.toml
desktop/src-tauri/web-server/src/: main.rs
desktop/src/__tests__/: App.test.tsx
desktop/src/components/: ChartView.tsx  Dashboard.tsx  DataTables.tsx  DataView.tsx  Sidebar.tsx  SummaryCards.tsx  Uncategorized.tsx
docs/: README.md  architecture.md  configuration.md  development.md  roadmap.md  sample_data.csv  usage.md
docs/superpowers/plans/: 2026-07-05-csv-upload-drag-and-drop.md  2026-07-05-tauri-frontend.md
docs/superpowers/specs/: 2026-07-05-csv-upload-drag-and-drop.md  2026-07-05-rust-rewrite-design.md  (+1 more)
legacy/: constants.py  pdf2csv.py  requirements.txt
tests/: test_app.py  test_pipeline.py
web-dashboard/: README.md  package.json
web-dashboard/src/: App.css  api.ts  types.ts  utils.ts
(+2 files in other folders)
