[workspace]
members = ["dkb-core", "web-server"]

[package]
name = "dkb-dashboard"
version = "0.1.0"
edition = "2021"

[lib]
name = "dkb_dashboard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dkb-core = { path = "dkb-core" }
rfd = "0.15"
